--- a/Style Files/homeStyle.css
+++ b/Style Files/homeStyle.css
@@ -34,6 +34,7 @@
     letter-spacing: 0.5px;
 }
 
+/*Content 2: Section on Research Overview*/
 .content1{
     display: flex;
     flex-direction: row;
@@ -78,7 +79,7 @@
     box-shadow: 0 2px 8px rgba(0,0,0,0.10);
 }
 
-/*Content 2*/
+/*Content 2: Section on Featured Projects*/
 .content2{
     margin: 18px 0px 0px 0px;    
     background: white;
@@ -106,8 +107,9 @@
 }
 
 
-/*Content 3: Intriguing Datasets*/
+/*Content 3: Section on Intriguing Datasets*/
 .content3{
+    margin-top: 20px;
     display: flex;
     flex-direction: column;
     background: white;
@@ -122,6 +124,7 @@
 }
 
 .top h2{
+    margin-top: 0;
     font-size: 2.4rem;
     color: #00157F;
     font-weight: bold;
@@ -140,16 +143,12 @@
     align-items: center;
 }
 
-.middle h2{
-    text-decoration: underline;
-    color: #00157F;
-    margin-bottom: 0;
-}
 
 .middle p{
     margin-top: 15px;
-    width: 500px;
-    font-size: 1rem;
+    width: 600px;
+    font-size: 1.4rem;
+    text-align: center;
 }
 
 .bottom{
@@ -169,15 +168,10 @@
     margin-right: 80px;
 }
 
-.leftLinkText h2, .rightLinkText h2{
-    color:#00157F;
-    text-decoration: underline;
-    text-align: center;
-}
 
 .leftLinkText p, .rightLinkText p{
     text-align: center;
-    font-size: 1rem;
+    font-size: 1.4rem;
 }
 
 .bibSection{
@@ -193,6 +187,7 @@
 .bibFormat{
     margin-bottom: 50px;
 }
+
 .bibFormat h2{
     font-weight: 900;
     color: #00157F;
@@ -205,9 +200,9 @@
     font-size: 25px;
 }
 
-.centered{
+.centered a{
     text-align: center;
     color: #00157F;;
     text-decoration: underline;
-    font-size: 20px;
+    font-size: 30px;
 }
